--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "@ant-design/nextjs-registry": "^1.1.0",
     "antd": "^5.26.7",
+    "apexcharts": "^5.3.2",
     "next": "15.4.5",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
@@ -23,6 +25,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
+    "json-server": "^1.0.0-beta.3",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
