Add calendar feature with FullCalendar integration and event fetching from API

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@ant-design/nextjs-registry": "^1.1.0",
     "@fullcalendar/core": "^6.1.19",
     "@fullcalendar/daygrid": "^6.1.19",
+    "@fullcalendar/interaction": "^6.1.19",
     "@fullcalendar/react": "^6.1.19",
+    "@fullcalendar/timegrid": "^6.1.19",
     "antd": "^5.26.7",
     "apexcharts": "^5.3.2",
     "next": "15.4.5",
